--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,42 @@
-# Ignore environment files
-.env
-.env.local
-.env.development
-.env.production
-
-# Node modules
-node_modules/
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
+# Dependency directories
+node_modules/
+.pnp/
+.pnp.js
+
+# Build output
 dist/
 build/
+.next/
+out/
+
+# Cache
+.cache/
+.npm/
+.yarn/
+coverage/
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Editor / IDE settings
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Icon?
